Fix event set times display on mobile

--- a/smallslive/static/sass/base/_typography.scss
+++ b/smallslive/static/sass/base/_typography.scss
@@ -162,6 +162,10 @@ $text-font-size-big: 1.4em;
 // Titles
 .title1 {
   @include title1;
+
+  @media(max-width: $screen-sm-max) {
+    font-size: 11px;
+  }
 }
 
 .event-overlay-title {
